Fixed z-index bug

--- a/css/styles.css
+++ b/css/styles.css
@@ -65,6 +65,7 @@ body {
   background-color: rgba(255, 255, 255, 0.6);
   box-shadow: -0.5rem 0.5rem rgba(0, 0, 0, 0.5);
   border-radius: 2rem;
+  z-index: 10;
 }
 
 #quote,
@@ -206,8 +207,10 @@ body {
   align-items: center;
   height: 100vh;
   width: 100%;
+  background-color: black;
   background-image: url(../img/background.jpg);
   background-size: cover;
+  z-index: 20;
 }
 
 #countdown {
@@ -219,6 +222,7 @@ body {
     rgb(255, 238, 0),
     rgb(0, 92, 204)
   );
+  background-clip: text;
   -webkit-background-clip: text;
   -webkit-text-fill-color: transparent;
 }
